[project]
name = "qcd-tt-jets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "polars>=1.42.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "skorch>=1.4.0",
    "torch>=2.13.0",
    "torch-geometric>=2.8.0",
    "torchvision>=0.28.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "marimo>=0.23.14",
]
